# techkern

./: .health  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json
.github/workflows/: ci.yml  heartbeat.yml
docs/: api-reference.md  architecture.md  quickstart.md
docs/tools/: mint-authority-check.md  query-kol-wallets.md  query-solana-swaps.md
examples/claude-desktop/: README.md
examples/cline/: README.md
examples/curl/: route.sh
examples/cursor/: README.md  mcp.json
examples/nodejs/: route.js
examples/openai-agents/: index.ts  package.json
examples/python/: route.py
sdk/node/: package.json
sdk/node/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/techkern_sdk/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
spec/: RFC-0003-websocket-stream-format.md
src/: index.ts  router.ts  server.ts  types.ts
src/backends/: anyscale.ts  fireworks.ts  groq.ts  lambda.ts  together.ts
src/config/: features.ts
src/eval/: quality-monitor.ts
src/helius/: rpc.ts
src/tools/: dev-token-history.ts  holder-distribution.ts  liquidity-depth.ts  mint-authority-check.ts  new-token-alerts.ts  query-kol-wallets.ts  query-pump-fun-launches.ts  query-token-holders.ts  whale-tracker.ts
