[package]
name = "techkern"
version = "0.4.0"
edition = "2021"
description = "GPU inference router — cheapest LLM provider per call"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
